[project]
name = "pygta5"
version = "0.1.0"
description = "Computer Vision-Based Game AI Platform"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "tensorflow",
  "opencv-python",
  "pynput",
  "tflearn"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
collect-data = "src.collect_data:main"
train-model = "src.train_model:main"
test-model = "src.test_model:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 